# arden_dev

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TASKS_BOOTSTRAP.md  arden.7z  dev_shell.ps1  src_structure.txt
agents/: stage1_camera.txt
docs/: src_snapshot_2025-12-06_235546.md
docs/stages/: stage0.md
log/: changes
src/: compat.rs  main.rs
src/aspectrolog/: db.rs  ui.rs
src/butler/: core.rs  ui.rs
src/debug/: ui.rs
src/engine/: compat.rs  config.rs
src/gameplay/: camera.rs  input.rs  player.rs
src/haos/: logic.rs  state.rs
src/ui/: devmenu.rs
src/vector/: field.rs  map.rs
src/world/: coords.rs  grid.rs
src/world/grid/: mod.rs
src/world/sectors/: mod.rs
