[package]
name = "arden"
version = "0.1.0"
edition = "2021"
authors = ["Arden Dev Team <dev@arden>"]
description = "Arden Engine MVP — stable base on Bevy 0.13.2"
license = "MIT"
default-run = "arden"

[dependencies]
bevy = { version = "=0.13.2", default-features = true }
bevy_egui = "=0.25.0"
bevy-inspector-egui = "=0.23.4"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
proptest = "1"

[profile.dev]
opt-level = 1
debug = true
incremental = true
codegen-units = 16

[profile.release]
opt-level = 3
lto = true